--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -10,16 +10,16 @@
     <title>shoulder</title>
 
     <!-- Bootstrap -->
-    <link href="static/css/bootstrap.min.css" rel="stylesheet">
+    <link href="static/css/common/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome -->
-    <link href="static/css/font-awesome.min.css" rel="stylesheet">
+    <link href="static/css/common/font-awesome.min.css" rel="stylesheet">
     <!-- NProgress -->
-    <link href="static/css/nprogress.css" rel="stylesheet">
+    <link href="static/css/common/nprogress.css" rel="stylesheet">
     <!-- Animate.css -->
-    <link href="static/css/animate.min.css" rel="stylesheet">
+    <link href="static/css/common/animate.min.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
-    <link href="static/css/custom.min.css" rel="stylesheet">
+    <link href="static/css/common/custom.min.css" rel="stylesheet">
   </head>
 
   <body class="login">
